--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /*
 Theme Name: Responsive Tabs 
 Theme URI: http://twowayconstituentcommunication.com
-Description: Responsive Tabs is a fully responsive theme.  It is visually elegant and minimizes page weight for rapid response.  The theme was designed for politicians or organizations seeking to emphasize two communications with their constituents, but has broad use for any organization seeking a clean, attractive look and a clear content hierarchy.
+Description: Responsive Tabs is a fully responsive theme.  It is visually elegant and minimizes page weight for rapid response.  The theme was designed for politicians or organizations seeking to emphasize two-way communications with their constituents, but has broad use for any organization seeking a clean, attractive look and a clear content hierarchy.
 It supports presentation of discussion in native wordpress as well as in bbpress.  
 Version: 1.0
 Author: Will Brownsberger
 Author URI: http://willbrownsberger.com
-Tags: responsive, bbPress, colors, flexible, constituent, cms, fonts, content management, dialog
+Tags: responsive, tabs, light, fast, colors, flexible, bbPress, constituent, cms, fonts, content management, dialog
 
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
